Fix closing tag for HTML document

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -37,4 +38,4 @@
   <button onclick="alert('عرض التقرير اليومي')">التقرير اليومي</button>
   <button onclick="alert('تقرير المجمّع')">تقرير مجمّع</button>
 </body>
-</html
+</html>
